css/styles.css
*{
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
}
body{
  display: flex;
  justify-content: center;
}

main{
    display: flex;
    gap: 10px;
    flex-direction: column;
    align-items: center;
    max-width: 99vw;
}

.main-nav{
  display: flex;
  position: fixed;
  flex-direction: column;
  width: 99vw;
  height: 8.5rem;
  background: linear-gradient(to bottom, red 0%, black 40%, white 60%);
  gap: 3px;
}

.main-nav img{
  width: 200px;
  margin: 5px;
}



#resultado {
  display: flex;
  justify-content: center;
  margin-top: 8.8rem;
  margin-bottom: 1.2rem;
  flex-wrap: wrap;
  gap: 12px;
}
.card {
  --type-primary:#A8A77A;
  --type-secondary:var(--type-primary);
  background: linear-gradient(135deg, var(--type-primary), var(--type-secondary));
  border: 1px solid #ddd;
  border-radius: 20px;
  text-align: center;
  text-transform: capitalize;
  min-width: 95vw;
  display: flex;
  align-items: center;
}
.card img {
  margin-left: 3vw;
  width: 100px;
  height: 100px;
}

.card-content{
  display: flex;
  flex-direction: column;
}

.error {
  color: crimson;
  font-weight: bold;
}



.buscador{
  display: flex;
  margin-left: 8px;
}

.TypeSelector{
  display: flex;
  margin-left: 8px;
}

.GenSelector{
  display: flex;
  margin-left: 8px;
}




/* Estilos para tarjetas de información extensa pokemons */

.TarjetaInfo{
  display: flex;
  flex-direction: column;
  align-items: center;
}

.PokemonHeader{
  display: flex;
  justify-content: center;
  align-items: center;
  height: 16vh;
  width: 100vw;
  gap: 4vw;
}

.PokemonName{
  display: flex;
  flex-direction: column;
  text-transform: capitalize;
}

.PokemonHeader img{
  width: 100px;
}

.pokeInfo{
  display: flex;
  flex-direction: column;
  min-height: 70vh;
  width: 100vw;
  gap: 20px;
}

.pokeInfo-content{
  margin: 10px;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.info{
  border-radius: 10px;
  background-color: rgb(250, 250, 250);
  min-height: 10vh;

}

.info p{
  margin: 10px;
}

.estadisticas{
  border-radius: 10px;
  background-color: rgb(250, 250, 250);
  min-height: 60vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.estadisticas p{
  margin-left: 2vw;
}

.tallaje{
  display: flex;
  justify-content: center;
  gap: 2vw;
}

.tallaje-content{
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 6px;
  background-color: rgb(250, 250, 250);
  min-height: 1.5rem;
  min-width: 10rem;
}


#btnRegresar{
  border-radius: 50%;
  width: 50px;
  height: 50px;
  background-color: rgb(84, 141, 255);
  opacity: 70%;
  font-size: larger;
  align-self: flex-end;
  justify-self: end;
  margin: 10px;
  position: fixed;
  right: 2vw;
  bottom: 3vh;
  border: black solid;
}


/* Color de las tarjetas Info */

.grassHeader{
  background-color: rgb(67, 156, 92)
}

.grassBody{
  background-color: rgb(104, 255, 147);
}

.fireHeader{
  background-color:rgb(255, 104, 104) 
}

.fireBody{
  background-color:rgb(255, 200, 200)
}

.waterHeader{
  background-color: rgb(104, 142, 255);
}

.waterBody{
  background-color: rgb(182, 200, 255);
}

.normalHeader{
  background-color: rgb(185, 185, 185) ;
}

.normalBody{
  background-color: rgb(234, 234, 234);
}

.bugHeader{
  background-color: rgb(74, 183, 105) ;
}

.bugBody{
  background-color: rgb(156, 193, 166);
}

.poisonHeader{
  background-color: rgb(178, 62, 255) ;
}

.poisonBody{
  background-color: rgb(216, 159, 255);
}

.electricHeader{
  background-color: rgb(255, 255, 58) ;
}

.electricBody{
  background-color: rgb(252, 255, 157);
}

.groundHeader{
  background-color: rgb(128, 110, 61) ;
}

.groundBody{
  background-color: rgb(223, 208, 169);
}

.fairyHeader{
  background-color: rgb(255, 151, 241) ;
}

.fairyBody{
  background-color: rgb(255, 218, 254);
}

.fightingHeader{
  background-color: rgb(255, 157, 82) ;
}

.fightingBody{
  background-color: rgb(255, 223, 199);
}

.psychicHeader{
  background-color: rgb(255, 25, 228) ;
}

.psychicBody{
  background-color: rgb(255, 153, 243);
}

.rockHeader{
  background-color: rgb(99, 63, 32);
}

.rockBody{
  background-color: rgb(180, 157, 136);
}

.ghostHeader{
  background-color: rgb(109, 38, 159);
}

.ghostBody{
  background-color: rgb(190, 157, 213);
}

.iceHeader{
  background-color: rgb(115, 236, 255);
}

.iceBody{
  background-color: rgb(201, 248, 255);
}

.dragonHeader{
  background-color: rgb(72, 28, 231);
}

.dragonBody{
  background-color: rgb(169, 149, 242);
}

.steelHeader{
  background-color: rgb(84, 84, 84);
}

.steelBody{
  background-color: rgb(196, 196, 196);
}

.darkHeader{
  background-color: rgb(60, 38, 13);
}

.darkBody{
  background-color: rgb(136, 126, 114);
}

.flyingHeader{
  background-color: #a5d0ff;
}

.flyingBody{
  background-color: rgb(226, 239, 255);
}



/* Estilos footer */
footer{
  display: flex;
  justify-content: center;
  gap: 7vw;
  position: fixed;
  bottom: 0px;
  background-color: rgb(255, 255, 255);
  width: 100vw;
  height: 1rem;
}


.canvas-content{
  display: flex;
  justify-content: center;
  width: 100%;
}

canvas{
  width: 100%;
}



/* Media querys para ordenador */
@media (width > 750px){
  .card{
    min-width: 48vw;
  }

  .card-content{
    justify-content: space-between;
  }

  .PokemonHeader{
    gap: 20vw;

  }

  .PokemonHeader img{
    margin-left: 20vw;
  }

  .canvas-content{
    width: 500px;
  }
}

